OPIK-3016 tests code style